try to fix scroll issue on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -32,14 +32,8 @@ html, body {
   padding: 0;
   height: 100%;
   background-color: #000;
-  overscroll-behavior: none;
-}
-
-body {
   position: fixed;
   overflow: hidden;
-  width: 100%;
-  height: 100%;
 }
 
 #smooth-content {
